app/assets/stylesheets/projects.scss
//newproject-editproject
.projects-new-container {
  border: 1px solid $form-border-grey;
  margin-top: 20px;
  max-width: 80%;
  padding-bottom: 20px;
  padding-top: 20px;
}

.form-control {
    border-radius: 4px;
}

.projects-primary-checkpoint {
  max-width: 260px;
}

.primary-checkpoint {
  border-radius: 4px;
}

.projects-tag-form-group {
  h6 {
    display: inline-block;
  }
}

.projects-type-field-heading {
  margin-bottom: 0;
}

.projects-type-field-warning {
  display: block;
  padding-bottom: 15px;
  padding-top: 0;
}

//breakpoints
@media (max-width: 400px) {
  .projects-new-container {
    max-width: 95%;
  }

  .projects-form-container {
    max-width: 90%;
  }
}
//newproject-editproject ends

//project details
.projects-iframe-container {
  border: 1.5px solid $shadow-black;
  margin-bottom: 20px;
  padding: 10px;
}

.projects-details {
  background-color: $project-card-grey;
  padding-left: 0;
  padding-right: 0;
}

.projects-details-heading-container {
  background-color: $primary-green;
  height: 55px;
  padding-bottom: 10px;
  padding-top: 10px;
}

.projects-details-heading {
  color: $white;
  font-size: 25px;
  font-weight: 600;
  height: 35px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.projects-views-count-container {
  color: $black;
  display: flex;
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 8px;
  // margin-right: 0;
  margin-top: 5px;
  padding-right: 8px;
  text-align: right;
  justify-content: right;
  
}

.icons-div {
  width: 6rem;
}

.projects-star-count-icon {
  color: $star-yellow;
}


.projects-user-details-container {
  padding: 0 20px 15px;

  >p {
    display: block;
    margin-bottom: 10px;
    text-align: left;
    width: 80%;
  }
}

.projects-search-tags-container {
  display: block;
  margin-bottom: 15px;
  padding-left: 0;
  text-align: left;
  width: 80%;
}

.projects-details-description {
  height: 150px;
  margin-top: -8px;
  overflow-y: auto;
  padding-top: 0;
  text-align: left;
  word-wrap: break-word;
}

.projects-horizontal-rule {
  width: 100%;
}

.projects-primary-button {
  margin-left: 0;
  padding: 3px 8px;
}

.projects-others-embed-button {

  &.active {
    background-color: $secondary-green;
  }
}

.projects-button-star-icon {
  height: 25px;
  padding-bottom: 25px;
  padding-top: 8px;
}

.projects-self-embed-button {

  &.active {
    background-color: $secondary-green;
    color: $white;
  }
}

.projects-embed-text-container {
  padding-left: 5px;
}

.projects-embed-text {
  border: 1.5px solid $secondary-green;
  font-size: 12px;
  outline-color: $secondary-green;
  text-align: left;
}

.embed-container {
  background-color: $slightblack;
}

.projectshow-embed-text-confirmation {
  display: none;
  text-align: right;
}

.embed-input-fields {
  display: flex;

  .col-form-label {
    padding-left: 0;
  }

  b {
    display: block;
    width: 100px;
  }
}

.embed-link-textarea {
  font-size: 12px;
  width: 100%;
}

.projects-collaborators-container {
  background-color: $project-card-grey;
}

.projects-collaborators-heading {
  background-color: $primary-green;
  color: $white;
  font-size: 25px;
  font-weight: 600;
  height: 55px;
  margin-bottom: 10px;
  padding: 10px;
}

.projects-collaborators-data {
  overflow: hidden;
  padding: 5px 15px;
  text-align: left;
  text-overflow: ellipsis;
}

.projects-collaborators-button-container {
  margin-top: -5px;
  padding: 0;
  text-align: center;
}

.projectshow-collaborator-button {
  background-color: $white;
  border: 0;
}

.projects-collaborators-horizontal-rule {
  width: 80%;
}

.char-counter {
  color: $tooltip-grey;
  font-size: 14px;
  margin: 5px 0 0 auto;
}

.is-invalid {
  color: $red;
}

//breakpoints
@media (max-width: 575px) {
  .projects-collaborators-button-container {
    margin-top: 5px;
  }
}
//project details ends

